--- a/src/assets/home.css
+++ b/src/assets/home.css
@@ -4,6 +4,18 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: #111111 !important;
-  border-radius: 8px
-;
+  border-radius: 8px;
+}
+
+.center {
+  display: flex;
+  margin: auto;
+  padding-top: 25px;
+  margin-top: 50px;
+}
+
+.graph {
+  display: flex;
+  padding-top: 40px;
+  padding-bottom: 10px;
+}
