--- a/src/assets/keypoint.css
+++ b/src/assets/keypoint.css
@@ -20,7 +20,7 @@
 }
 
 .keypoint .mantine-Text-root:first-child {
-  color: #6c757d;
+  /* color: #6c757d; */
   font-weight: 500;
   text-transform: uppercase;
   letter-spacing: 0.5px;
@@ -28,6 +28,6 @@
 }
 
 .keypoint .mantine-Text-root:last-child {
-  color: #2c3e50;
+  /* color: #2c3e50; */
   font-weight: 600;
 }
